--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,28 +13,25 @@
 	<script src="assets/index.js" defer></script>
 </head>
 <body>
-	<div class="editbarr">
-		<div class="edit-logo"><i class="fa-regular fa-pen-to-square"></i>Mode édition</div>
-		<div class="edit-btn"><p></p>publier les changements</div>
+	<div class="edit-mode">
 	</div>
-	<div class="main-container">
-		<header>
-	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
-	<nav>
-		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<a class="nav__link" href="login.html"><li>login</li></a>
-			<a class="nav__link" href="index.html"><li>logout</li></a>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
-		</ul>
-	</nav>
-		</header>
-		<main>
+	<div class="background">
+		<div class="main-container">
+			<header>
+				<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+				<nav>
+					<ul class="header-links">
+						<li>projets</li>
+						<li>contact</li>
+						<a class="nav__link" href="login.html"><li>login</li></a>
+						<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+					</ul>
+				</nav>
+			</header>
+			<main>
 	<section id="introduction">
-		<figure>
+		<figure id="image-and-logo">
 			<img src="./assets/images/sophie-bluel.png" alt="">
-			<div class="intro-logo"><i class="fa-regular fa-pen-to-square"></i>modifier</div>
 		</figure>
 		<article>
 			<h2>Designer d'espace</h2>
@@ -46,10 +43,9 @@
 	<section id="portfolio">
 		<div class="portfolio-title-and-logo">
 			<div class="portfolio-title"><h2>Mes Projets</h2></div>
-			<div class="portfolio-logo"><i class="fa-regular fa-pen-to-square"></i>modifier</div>
 		</div>
 		<div class="categories">
-			<input type="button" value="Tous"> <!--Test , Css ligne 140-->
+			<input type="button" value="Tous"> 
 		</div>
 		<div class="gallery">
 		</div>
@@ -67,7 +63,8 @@
 			<input type="submit" value="Envoyer">
 		</form>
 	</section>
-		</main>
+			</main>
+		</div>
 	</div>
 <footer>
 	<nav>
