--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -9,14 +9,14 @@
 	<link rel="stylesheet" href="./assets/style.css">
     <script src="assets/login.js" defer></script>
 </head>
-<body>
-    <header>
-        <h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+<body class="login">
+    <header class="login-header">
+        <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
         <nav>
             <ul>
                 <li>projets</li>
                 <li>contact</li>
-                <li><a href="login.html"></a>login</li>
+                <li><a href="login.html"></a><b>login</b></li>
                 <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
             </ul>
         </nav>
