--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="./assets/style.css">
     <script src="assets/login.js" defer></script>
 </head>
-<body class="login">
+<body>
     <header class="login-header">
         <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
         <nav>
@@ -21,7 +21,7 @@
             </ul>
         </nav>
     </header>
-    <section id="contact">
+    <section id="login-contact">
         <h2>Log In</h2>
         <form id="login-form" action="#" method="post">
 			<label for="email">Email</label>
