--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -15,7 +15,6 @@
 <body>
 	<div class="edit-mode">
 	</div>
-	<div class="background">
 		<div class="main-container">
 			<header>
 				<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
@@ -23,55 +22,57 @@
 					<ul class="header-links">
 						<li>projets</li>
 						<li>contact</li>
-						<a class="nav__link" href="login.html"><li>login</li></a>
+						<a id="login-link" class="nav__link" href="login.html"><li>login</li></a>
+						<a id="logout-link" class="nav__link" href="index.html"><li>logout</li></a>
 						<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 					</ul>
 				</nav>
 			</header>
 			<main>
-	<section id="introduction">
-		<figure id="image-and-logo">
-			<img src="./assets/images/sophie-bluel.png" alt="">
-		</figure>
-		<article>
-			<h2>Designer d'espace</h2>
-			<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
-			<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
-			<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
-		</article>
-	</section>
-	<section id="portfolio">
-		<div class="portfolio-title-and-logo">
-			<div class="portfolio-title"><h2>Mes Projets</h2></div>
-		</div>
-		<div class="categories">
-			<input type="button" value="Tous"> 
-		</div>
-		<div class="gallery">
-		</div>
-	</section>
-	<section id="contact">
-		<h2>Contact</h2>
-		<p>Vous avez un projet ? Discutons-en !</p>
-		<form action="#" method="post">
-			<label for="name">Nom</label>
-			<input type="text" name="name" id="name">
-			<label for="email">Email</label>
-			<input type="email" name="email" id="email">
-			<label for="message">Message</label>
-			<textarea name="message" id="message" cols="30" rows="10"></textarea>
-			<input type="submit" value="Envoyer">
-		</form>
-	</section>
+				<section id="introduction">
+					<figure id="image-and-logo">
+						<img src="./assets/images/sophie-bluel.png" alt="">
+						<div class="intro-logo"><i class="fa-regular fa-pen-to-square"></i>modifier</div>
+					</figure>
+					<article>
+						<h2>Designer d'espace</h2>
+							<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
+							<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
+							<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
+					</article>
+				</section>
+				<section id="portfolio">
+					<div class="portfolio-title-and-logo">
+						<div class="portfolio-title"><h2>Mes Projets</h2></div>
+						<div class="portfolio-logo"><i class="fa-regular fa-pen-to-square"></i>modifier</div>
+					</div>
+					<div class="categories">
+						<input type="button" value="Tous"> 
+					</div>
+						<div class="gallery">
+					</div>
+				</section>
+				<section id="contact">
+					<h2>Contact</h2>
+					<p>Vous avez un projet ? Discutons-en !</p>
+					<form action="#" method="post">
+						<label for="name">Nom</label>
+						<input type="text" name="name" id="name" autocomplete="name">
+						<label for="email">Email</label>
+						<input type="email" name="email" id="email" autocomplete="email">
+						<label for="message">Message</label>
+						<textarea name="message" id="message" cols="30" rows="10"></textarea>
+						<input type="submit" value="Envoyer">
+					</form>
+				</section>
 			</main>
 		</div>
-	</div>
-<footer>
-	<nav>
-		<ul id="footer-nav">
-			<li>Mentions Légales</li>
-		</ul>
-	</nav>
-</footer>
+	<footer>
+		<nav>
+			<ul>
+				<li>Mentions Légales</li>
+			</ul>
+		</nav>
+	</footer>
 </body>
 </html>
