--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -14,6 +14,10 @@
 </head>
 <body>
 	<div class="edit-mode">
+		<div class="editbarr">
+			<div class="edit-logo"><i class="fa-regular fa-pen-to-square"></i>Mode édition</div>
+			<div class="edit-btn"><p></p>publier les changements</div>
+		</div>
 	</div>
 		<div class="main-container">
 			<header>
