--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -48,8 +48,32 @@
 				<section id="portfolio">
 					<div class="portfolio-title-and-logo">
 						<div class="portfolio-title"><h2>Mes Projets</h2></div>
-						<div class="portfolio-logo"><i class="fa-regular fa-pen-to-square"></i>modifier</div>
+						<a href="modal1" class="portfolio-logo"><i class="fa-regular fa-pen-to-square"></i>modifier</a>
 					</div>
+						<aside id="modal1" class="modal" aria-hidden="true" role="dialog" aria-labelledby="title-modal" style="display: none;"> <!--verifier si ok-->
+							<div class="modal-wrapper modal-stop">
+								<div class="modal-closer">
+									<i class="fa-solid fa-xmark closer"></i>
+								</div>
+								<h3 id="title-modal">Galerie Photo</h3>
+								<div class="modal-gallery">
+								</div>
+								<a href="modal2" id="add-photo-link"><input class="modal-input" type="submit" value="Ajouter une photo"></a>								
+								<p>Supprimer la galerie</p>
+							</div>
+						</aside>
+						<aside id="modal2" class="modal" aria-hidden="true" role="dialog" aria-labelledby="title-modal" style="display: none;"> <!--verifier si ok-->
+							<div class="modal-wrapper modal-stop">
+								<div class="modal-return">
+									<i class="fa-solid fa-arrow-left"></i>
+								</div>
+								<div class="modal-closer">
+									<i class="fa-solid fa-xmark closer"></i>
+								</div>
+								<h3 id="title-modal">Ajout Photo</h3>
+								<input class="modal-input" type="submit" value="Valider">					
+							</div>
+						</aside>
 					<div class="categories">
 						<input type="button" value="Tous"> 
 					</div>
