modales-ok-manque-envoi-fichier

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -25,11 +25,11 @@
         <h2>Log In</h2>
         <form id="login-form" action="#" method="post">
 			<label for="email">Email</label>
-			<input type="email" name="email" id="email">
+			<input type="email" name="email" id="email" autocomplete="on" required>
             <label for="password">Mot de passe</label>
 			<input type="password" name="password" id="password">
             <p id="error-message"></p>
-			<input class="login-form-submit" type="submit" value="Se connecter">
+			<input class="login-form-submit" type="submit" value="Se connecter" required>
 		</form>
         <p>Mot de passe oublié</p>
     </section>
