--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
-    <script src="assets/login.js" defer></script>
+    <script src="assets/scripts/login.js" defer></script>
 </head>
 <body>
     <header class="login-header">
@@ -29,9 +29,9 @@
 			<label for="email">Email</label>
 			<input type="email" name="email" id="email" autocomplete="on" required>
             <label for="password">Mot de passe</label>
-			<input type="password" name="password" id="password">
+			<input type="password" name="password" id="password" required>
             <p id="error-message"></p>
-			<input class="login-form-submit" type="submit" value="Se connecter" required>
+			<input class="login-form-submit" type="submit" value="Se connecter">
 		</form>
         <p>Mot de passe oublié</p>
     </section>
