--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -88,6 +88,7 @@
 										<input type="text" name="title" id="title" autocomplete="on" required>
 										<label class="input-categorie" for="category">Catégorie</label>
 										<select name="category" id="category" required>
+											<option value="0" disabled selected>---</option>
 										</select>
 									</div>
 									<input class="modal-submit" type="submit" value="Valider">		
