--- a/login.html
+++ b/login.html
@@ -8,8 +8,8 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="./assets/style.css">
-    <script src="assets/scripts/login.js" defer></script>
+	<link rel="stylesheet" href="FrontEnd/assets/style.css">
+    <script src="FrontEnd/assets/scripts/login.js" defer></script>
 </head>
 <body>
     <header class="login-header">
@@ -19,7 +19,7 @@
                 <li>projets</li>
                 <li>contact</li>
                 <li><a href="login.html"></a><b>login</b></li>
-                <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+                <li><img src="FrontEnd/assets/icons/instagram.png" alt="Instagram"></li>
             </ul>
         </nav>
     </header>
